--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <!-- Main Article Section -->
     <main class="article-container">
         <article class="main-article">
-            <h2 class="article-title">The Death of the Natural Diamond; How This Disappearance is Shaking the World
+            <h2 class="article-title" style="font-family: 'Chelt', serif;">The Death of the Natural Diamond; How This Disappearance is Shaking the World
             </h2>
             <p class="article-title-sub">The last natural diamond was mined from the Earth's surface, what events led up
                 to
