--- a/public/theDaily_Google.html
+++ b/public/theDaily_Google.html
@@ -334,8 +334,8 @@
             </p>
             <hr>
             <section>
-                <h2>Motivating Event</h2>
-                <p style="font: Georgia; font-size: 20px;">
+                <h2 style="font-size: 25px;">Motivating Event</h2>
+                <p style="font: Georgia; font-size: 18px;">
                     The Justice Department is moving forward with extreme action against Google, aiming to curb its
                     monopoly in the search engine market. The government is contemplating a restructuring that could
                     redefine the $2 trillion tech company. This move marks a significant moment in antitrust history,
@@ -345,8 +345,8 @@
                 </p>
             </section>
             <section>
-                <h2>Reflection on the Genre of Dialogue</h2>
-                <p style="font: Georgia; font-size: 20px;">
+                <h2 style="font-size: 25px;">Reflection on the Genre of Dialogue</h2>
+                <p style="font: Georgia; font-size: 18px;">
                     When comparing the two genres of dialogue and annotation, it reveals how both are tied to the idea
                     of active engagement with not only the media being explored, but with the person creating that
                     media. Dialogue explores ideas through voices, each contributing unique insights that can shape and
