Annotation page format fix

--- a/public/annotation.html
+++ b/public/annotation.html
@@ -63,7 +63,7 @@
                 </p>
             </div>
 
-            <div class="author-profile">
+            <div class="author-profile"  style="padding-left: 12%; margin-bottom: 0;">
                 <div class="author-profile-sub">
                     <img class="profile-photo" src="images/author.jpg" alt="Author photo">
                     <p style="font-family: 'Georgia', sans-serif; text-decoration: none;"><b><a href="author.html"
