Fix format issues, Add opinion page

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The New New York Times</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                 </p>
             </div>
 
-            <div class="author-profile" style="padding-left: 12%; margin-bottom: 0;">
+            <div class="author-profile">
                 <div class="author-profile-sub">
                     <img class="profile-photo" src="images/author.jpg" alt="Author photo">
                     <p style="font-family: 'Georgia', sans-serif; text-decoration: none;"><b><a href="author.html" style="text-decoration: none; color: black;">By <u>Layne Hunt</u></a></b></p>
