format opinion author profile date

--- a/public/opinion.html
+++ b/public/opinion.html
@@ -67,7 +67,7 @@
                     <p style="font-family: 'Georgia', sans-serif; text-decoration: none;"><b><a href="author.html"
                                 style="text-decoration: none; color: black;">By <u>Layne Hunt</u></a></b></p>
                 </div>
-                <p class="article-author">September 15, 2176</p>
+                <p class="article-author" style="text-align: left;">November 16, 2024</p>
             </div>
 
             <div class="article-content" style="font: Georgia;">
